  * ps: Add environ field
  * ps: Add htprv and htshr fields for HugeTables
  * ps: restore lost tasks for options --sort with -H      issue #304
  * ps: add 'docker' containers field, similar to 'lxc'
  * ps: Restore AIX free-format                            issue #323
  * ps: can display open file descriptors for each task
  * ps: Fix signames scanning                              issue #341
  * slabtop: Add --human option for slab size
  * sysctl: Add glob excludes                              merge #206
  * top: added a 'CLS' scheduling class field, like ps
  * top: exploit library addition of 'disk sleep'          issue #265
  * top: add 'docker' containers field, similar to 'lxc'
  * top: provides additional control over colors
  * top: can display open file descriptors for each task
  * top: corrected cpu % for hosts with qemu processes     issue #339
  * top: remains functional if /proc mounted subset=pid
  * uptime: Add container uptime option                    issue #300
  * w: Don't segfault with -s option                       issue #301
  * w: Cache pids list                                     issue #305
  * w: Add container uptime option
  * watch: use clock_gettime                               issue #295
  * hugetop: a new utility to show huge page information   merge #214

procps-ng-4.0.4
---------------
  * library (API & ABI unchanged)
    increment revision: 0:2:0
    tolerates all potential 'cpuinfo' formats              issue #272
    restore the proper main thread tics valuations         issue #280
    Remove myself from proc count                          merge #193
    Refactor the escape code                               Debian #1035649
  * free: -L one line output                               issue #156
  * pgrep: Use only --signal option for signal             Debian #1031765
  * pgrep: suppress >15 warning if using regex             Debian #1037450
  * pidof: Add -t option to show threads                   merge #190