@@ -87,6 +87,7 @@ makEXT(ADDR_CURR_ESP)
 makEXT(ADDR_STACK_START)
 makEXT(AUTOGRP_ID)
 makEXT(AUTOGRP_NICE)
+makEXT(CAP_PRM)
 makEXT(CGNAME)
 makEXT(CGROUP)
 makEXT(CMD)
