@@ -65,6 +65,7 @@ makREL(ADDR_CURR_ESP)
 makREL(ADDR_STACK_START)
 makREL(AUTOGRP_ID)
 makREL(AUTOGRP_NICE)
+makREL(CAP_PRM)
 makREL(CGNAME)
 makREL(CGROUP)
 makREL(CMD)
